--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>uirfdgoicuiorewgreuiyawiuhriouwer2H JKWERH IUHQEUR</h1>
+    <p>The **T.A. Marryshow Community College (TAMCC)** is Grenada’s main publicly funded tertiary institution,
+         formed through the merger of several post-secondary schools. 
+         Its main campus is in Tanteen, St. George’s,
+          with additional sites in Mirabeau, St. Andrew, Carriacou, and St. Patrick.
+           TAMCC offers certificates, associate degrees, and some bachelor programmes in areas such as arts,
+            sciences, teacher education, agriculture, applied arts, and technology.
+             It also provides continuing education and technical-vocational training.
+              The college is nationally accredited and plays a key role in workforce development,
+               with partnerships in areas like ICT, creative industries, and climate-smart agriculture.
+                Through collaborations with regional and international organizations,
+                 TAMCC continues to expand opportunities for Grenadian students to access quality education and practical training.
+</p>
 
-    <p>Jaden plays violin </p>
+           <ol 
+           </li>Schools in TAMCC</li>
+           <li>School of Applied Arts and Technoloy</li>
+           <li>School of Art Science and Professional Studies</li>
+           <li>School of Continuing Education</li>
+
+    
+        <a href = "https://www.tamcc.edu.gd/">TAMCC</a> 
+<p class="title"> <h6>Created by Joshua Evelyn</h6>
 </body>
 </html>
